Fix checkbox/label alignment. We do this by additional span inside label and vertical-align:middle on both checkbox and span.

--- a/skins/larry/styles.css
+++ b/skins/larry/styles.css
@@ -71,6 +71,12 @@ textarea.placeholder {
 	font-weight: bold;
 }
 
+/* fixes vertical alignment of checkboxes and labels */
+label input,
+label span {
+	vertical-align: middle;
+}
+
 /*** buttons ***/
 
 input.button {
